fixed registerController
