# src/controllers/auth.js
@@ -9,13 +9,31 @@ import { ONE_DAY } from '../constants/index.js';
 
 export const registerUserController = async (req, res) => {
   const user = await registerUser(req.body);
+
+  const session = await loginUser({
+    email: req.body.email,
+    password: req.body.password,
+  });
+
+  res.cookie('refreshToken', session.refreshToken, {
+    httpOnly: true,
+    expires: new Date(Date.now() + ONE_DAY),
+  });
+
+  res.cookie('sessionId', session._id.toString(), {
+    httpOnly: true,
+    expires: new Date(Date.now() + ONE_DAY),
+  });
+
   res.status(201).json({
     status: 201,
     message: 'Successfully registered user!',
-    data: { user: user },
+    data: {
+      user,
+      accessToken: session.accessToken,
+    },
   });
 };
-
 export const loginUserController = async (req, res) => {
   const session = await loginUser(req.body);
 
